--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@types/bun": "latest"
   },
   "scripts": {
-    "sui:start": "bun run sui-to-evm.ts",
+    "sui:start": "bun run sui.ts",
     "xrpl:wallet": "bun run gen-xrpl-wallet.ts",
-    "xrpl:start": "bun run xrpl-to-evm.ts"
+    "xrpl:start": "bun run xrpl.ts"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
