--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "@mysten/sui": "~1.24.0",
     "ethers": "^6.13.5",
     "ripple-address-codec": "^5.0.0",
-    "xrpl": "^4.2.0"
+    "xrpl": "4.2.0"
   }
 }
