--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "@types/bun": "latest"
   },
   "scripts": {
-    "sui:start": "bun run sui.ts",
-    "xrpl:wallet": "bun run gen-xrpl-wallet.ts",
-    "xrpl:start": "bun run xrpl.ts",
-    "xrpl:trust-line": "bun run xrpl-trust-line.ts"
+    "sui:start": "bun run scripts/sui.ts",
+    "xrpl:wallet": "bun run scripts/gen-xrpl-wallet.ts",
+    "xrpl:start": "bun run scripts/xrpl.ts",
+    "xrpl:trust-line": "bun run scripts/xrpl-trust-line.ts",
+    "stellar:start": "bun run scripts/stellar.ts"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -18,6 +19,7 @@
     "@axelar-network/axelarjs-sdk": "^0.17.2",
     "@axelarjs/sui": "0.0.0-snapshot.8996e1c",
     "@mysten/sui": "~1.24.0",
+    "@stellar/stellar-sdk": "^13.3.0",
     "ethers": "^6.13.5",
     "ripple-address-codec": "^5.0.0",
     "xrpl": "4.2.0"
